--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>This project includes a set of .Net components for synchronizing meta data with a SyncML server such as Funambol DS server. SyncML Client for Open Contacts and 
 SyncML Addin for MS Outlook are utilizing the API.</p>
-	<h3>End User Notice</h3>
+	<h3>Products</h3>
 	<p>In addition to SyncML Client API, this project also delivers&nbsp; a few 
 	applications:</p>
 	<ol>
@@ -38,6 +38,10 @@ SyncML Addin for MS Outlook are utilizing the API.</p>
 		Plugin for Open Contacts</a></li>
 	</ol>
 	<p><a href="screenshots.html"><strong>Screenshots</strong></a></p>
+		<h4><strong>Hints:</strong></h4>
+		<p>To use Addin for MS Outlook or Plugin for Open Contacts, please
+		<a href="http://www.fonlow.com/opencontacts/SyncMLClient/default.htm">
+		refer to this link</a>.</p>
 	<h3>Developer Notice</h3>
 	<p><strong>Requirements:</strong></p>
 	<ol>
@@ -49,8 +53,15 @@ SyncML Addin for MS Outlook are utilizing the API.</p>
 	<ul>
 		<li>Visual Paradiam for UML to view UML models saved in the design 
 		folder</li>
-		<li>Funambol&nbsp; SyncML Server for integration testing</li>
+		<li><a href="https://sourceforge.net/projects/funambol/">Funambol&nbsp; SyncML Server</a> for integration testing</li>
 	</ul>
+
+		<p><strong>Hints:</strong> </p>
+		<ul>
+			<li>Funambol SyncML Server is running on Java and hosted in Tomcat. 
+			You may either <a href="InstallFunambolWindow.html">install one of your own</a> or find a commercial SyncML 
+			server to use.</li>
+		</ul>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
